[gd_scene load_steps=5 format=2]

[ext_resource path="res://gui/theme.tres" type="Theme" id=1]
[ext_resource path="res://gui/buttons/Action.tscn" type="PackedScene" id=2]
[ext_resource path="res://content/gadgets/teleporter/TeleporterCarryTutorial.gd" type="Script" id=3]
[ext_resource path="res://content/gadgets/teleporter/teleporter_tutpic.png" type="Texture" id=4]

[node name="TeleporterCarryTutorial" type="MarginContainer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -473.0
margin_top = -105.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource( 1 )
script = ExtResource( 3 )
moveOutAfter = 50.0
moveInDelay = 1.0
listeningDelay = 20.0

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 457.0
margin_bottom = 147.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 429.0
margin_bottom = 119.0

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer"]
margin_right = 44.0
margin_bottom = 107.0
rect_min_size = Vector2( 44, 60 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 400.0
margin_bottom = 107.0

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_right = 340.0
margin_bottom = 25.0
text = "level.tutorial.teleporter.carry1"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 340.0
margin_bottom = 66.0
custom_constants/separation = 6

[node name="Label1" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_bottom = 25.0

[node name="Action" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 6.0
margin_right = 6.0
margin_bottom = 25.0
action = "pickup"

[node name="Label2" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 12.0
margin_right = 12.0
margin_bottom = 25.0

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 340.0
margin_bottom = 107.0
custom_constants/separation = 6

[node name="Label3" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_bottom = 25.0

[node name="Action" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2" instance=ExtResource( 2 )]
margin_left = 6.0
margin_right = 6.0
margin_bottom = 25.0
action = "keeper_use"

[node name="Label4" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 12.0
margin_right = 12.0
margin_bottom = 25.0
